--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -59,17 +59,11 @@
                     Command="{Binding AddUniverseCommand}"
                     Background="{StaticResource AccentGreen}" Foreground="White" FontWeight="Bold" BorderThickness="0"/>
 
-            <TreeView Background="Transparent" BorderThickness="0"
+            <TreeView x:Name="MainTreeView" Background="Transparent" BorderThickness="0"
+                      SelectedItemChanged="MainTreeView_SelectedItemChanged"
                       ItemsSource="{Binding Universes}">
                 <TreeView.ItemContainerStyle>
-                    <Style TargetType="{x:Type TreeViewItem}">
-                        <!-- This two-way binding is the key to removing code-behind. -->
-                        <!-- It syncs the item's selected state with a property on the ViewModel. -->
-                        <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
-                        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
-                        <Setter Property="Foreground" Value="{StaticResource PrimaryText}"/>
-                        <Setter Property="Padding" Value="5"/>
-                    </Style>
+                    <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource {x:Type TreeViewItem}}"/>
                 </TreeView.ItemContainerStyle>
                 <TreeView.Resources>
                     <!-- Template for Universe Items -->
