--- a/Genisis.Presentation.Wpf/App.xaml
+++ b/Genisis.Presentation.Wpf/App.xaml
@@ -1,8 +1,7 @@
 <Application x:Class="Genisis.Presentation.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Genisis.Presentation.Wpf"
-             StartupUri="MainWindowV3.xaml">
+             xmlns:local="clr-namespace:Genisis.Presentation.Wpf">
     <Application.Resources>
 
     </Application.Resources>
